added mock service

--- a/src/app/components/modals/task-form/task-form.component.html
+++ b/src/app/components/modals/task-form/task-form.component.html
@@ -1,18 +1,16 @@
-<h1 mat-dialog-title>Editar Tarea</h1>
+<h1 mat-dialog-title>Change State</h1>
 <div mat-dialog-content>
-  <div class="card border-success" style="width: 18rem;">
-    <div class="card-header bg-transparent border-success">{{data.name}}
-    </div>
-      <div class="card-body">
-        <mat-form-field>
-          <input matInput [(ngModel)]="data.description" class="card-text">{{data.description}}
-          <input matInput [(ngModel)]="data.state" class="card-text">{{data.state}}
-          <input matInput [(ngModel)]="data.estimate" class="card-text">{{data.estimate}}
-        </mat-form-field>
-      </div>
-</div>
+  <h4>{{data.name}}</h4>
+  <mat-form-field>
+    <mat-label>Select State</mat-label>
+    <mat-select [(value)]="selectedState">
+      <mat-option *ngFor="let s of posibleStates" [value]="s">
+        {{s | taskStates}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="data" cdkFocusInitial>Ok</button>
+  <button mat-button cdkFocusInitial (click)="save()">Ok</button>
 </div>
