added ngbootstrap removed angular material

--- a/src/app/components/task-manager/task-manager.component.html
+++ b/src/app/components/task-manager/task-manager.component.html
@@ -1,50 +1,68 @@
 <div class="container-fluid m-4 task-manager">
-    <div class="row m-2">
-      <div class="col-sm-12 text-center">
-        <button type="button" class="btn btn-primary btn-lg" (click)="openCreateTaskModal()">Create Task</button>
+  <div class="row m-2">
+    <div class="col-sm-12 text-center">
+      <button
+        type="button"
+        class="btn btn-primary btn-lg"
+        (click)="openCreateTaskModal()"
+      >
+        Create Task
+      </button>
+    </div>
+  </div>
+  <div class="row m-2">
+    <div class="col-sm">
+      <div class="col-6">Planning</div>
+      <div class="col-6">
+        Total Estimate: {{ planningTasks | getTotalEstimate }}
       </div>
     </div>
-    <div class="row m-2">
-      <div class="col-sm">
-        <div class="col-6">Planning</div>
-        <div class="col-6">
-          Total Estimate: {{planningTasks | getTotalEstimate}}
-        </div>
-      </div>
-      <div class="col-sm">
-        <div class="col-6">InProgress</div>
-        <div class="col-6">
-          Total Estimate: {{inProgressTasks | getTotalEstimate}}
-        </div>
-      </div>
-      <div class="col-sm">
-        <div class="col-6">Completed</div>
-        <div class="col-6">
-          Total Estimate: {{completedTasks | getTotalEstimate}}
-        </div>
+    <div class="col-sm">
+      <div class="col-6">InProgress</div>
+      <div class="col-6">
+        Total Estimate: {{ inProgressTasks | getTotalEstimate }}
       </div>
     </div>
-    <div class="row m-2">
-      <div class="col-sm">
-        <ul class="tasklist">
-          <li *ngFor="let t of planningTasks">
-            <app-task [data]="t" (deleteTask)="deleteTaskProcess($event)" (updateTasksView)="updateTasks()"></app-task>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm">
-        <ul class="tasklist">
-          <li *ngFor="let t of inProgressTasks">
-            <app-task [data]="t" (deleteTask)="deleteTaskProcess($event)" (updateTasksView)="updateTasks()"></app-task>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm">
-        <ul class="tasklist">
-          <li *ngFor="let t of completedTasks">
-            <app-task [data]="t" (deleteTask)="deleteTaskProcess($event)" (updateTasksView)="updateTasks()"></app-task>
-          </li>
-        </ul>
+    <div class="col-sm">
+      <div class="col-6">Completed</div>
+      <div class="col-6">
+        Total Estimate: {{ completedTasks | getTotalEstimate }}
       </div>
     </div>
+  </div>
+  <div class="row m-2">
+    <div class="col-sm">
+      <ul class="tasklist">
+        <li *ngFor="let t of planningTasks">
+          <app-task
+            [data]="t"
+            (deleteTask)="deleteTaskProcess($event)"
+            (updateTasksView)="updateTasks()"
+          ></app-task>
+        </li>
+      </ul>
+    </div>
+    <div class="col-sm">
+      <ul class="tasklist">
+        <li *ngFor="let t of inProgressTasks">
+          <app-task
+            [data]="t"
+            (deleteTask)="deleteTaskProcess($event)"
+            (updateTasksView)="updateTasks()"
+          ></app-task>
+        </li>
+      </ul>
+    </div>
+    <div class="col-sm">
+      <ul class="tasklist">
+        <li *ngFor="let t of completedTasks">
+          <app-task
+            [data]="t"
+            (deleteTask)="deleteTaskProcess($event)"
+            (updateTasksView)="updateTasks()"
+          ></app-task>
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
