--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -1,12 +1,27 @@
 <div class="card border-success mt-2" style="width: 18rem;">
-  <div class="card-header bg-transparent border-success">{{data.name}}<div class="float-right pointer" (click)="deleteTask()">BU </div>
+  <div class="card-header bg-transparent border-success">
+    {{ data.name }}
+    <!-- <fa-icon
+      [icon]="faCoffee"
+      class="float-right pointer red-hover"
+      (click)="deleteTask()"
+    ></fa-icon> -->
   </div>
-    <div class="card-body">
-      <p class="card-text">{{data.description}}</p>
-      <p class="card-text">Estimate: {{data.estimate}}</p>
-      <div class="row">
-        <div class="col-7"><p class="card-text">State: {{data.state | taskStates}}</p></div>
-        <div class="col-5"><button class="btn btn-primary btn-sm w-80" (click)="changeStateClicked()">Change State</button></div>
+  <div class="card-body">
+    <p class="card-text">{{ data.description }}</p>
+    <p class="card-text">Estimate: {{ data.estimate }}</p>
+    <div class="row">
+      <div class="col-7">
+        <p class="card-text">State: {{ data.state | taskStates }}</p>
+      </div>
+      <div class="col-5">
+        <button
+          class="btn btn-primary btn-sm w-80"
+          (click)="changeStateClicked()"
+        >
+          Change State
+        </button>
       </div>
     </div>
+  </div>
 </div>
