--- a/src/app/components/modals/new-task-modal/new-task-modal.component.html
+++ b/src/app/components/modals/new-task-modal/new-task-modal.component.html
@@ -10,42 +10,38 @@
   </button>
 </div>
 <div class="modal-body">
-  <div class="form-group">
-    <label for="exampleFormControlInput1">Task Name</label>
-    <input type="text" class="form-control" [(ngModel)]="newTask.name" />
-  </div>
-  <div class="form-group">
-    <label for="description">Description</label>
-    <textarea
-      [(ngModel)]="newTask.description"
-      class="form-control"
-      id="description"
-      rows="3"
-    ></textarea>
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlSelect1">Select State</label>
-    <select
-      class="form-control"
-      id="exampleFormControlSelect1"
-      (change)="selectState($event)"
+  <form [formGroup]="newTaskForm" (ngSubmit)="save()">
+    <div class="form-group">
+      <label for="exampleFormControlInput1">Task Name</label>
+      <input type="text" class="form-control" formControlName="name" />
+    </div>
+    <div class="form-group">
+      <label for="description">Description</label>
+      <textarea
+        formControlName="description"
+        class="form-control"
+        rows="3"
+      ></textarea>
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlSelect1">Select State</label>
+      <select class="form-control" formControlName="state">
+        <option *ngFor="let s of posibleState" [ngValue]="s">{{
+          s | taskStates
+        }}</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlInput1">Estimate</label>
+      <input type="text" class="form-control" formControlName="estimate" />
+    </div>
+    <button
+      type="submit"
+      class="btn btn-primary"
+      [disabled]="!newTaskForm.valid"
+      [ngClass]="{ 'cursor-not-allowed': !newTaskForm.valid }"
     >
-      <option *ngFor="let s of posibleState" [value]="s">{{
-        s | taskStates
-      }}</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlInput1">Estimate</label>
-    <input type="text" class="form-control" [(ngModel)]="newTask.estimate" />
-  </div>
-</div>
-<div class="modal-footer">
-  <button
-    type="button"
-    class="btn btn-outline-dark"
-    (click)="activeModal.close(newTask)"
-  >
-    Save
-  </button>
+      Save
+    </button>
+  </form>
 </div>
