added routing and virtual scroll

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
     <div class="text-center">Task Manager
       </div>
 </header>
-
-<app-task-manager></app-task-manager>
+<router-outlet>
+</router-outlet>
 <!-- Footer -->
 <footer class="footer">
     <div class="text-center">© 2020 Copyright:
@@ -13,4 +13,3 @@
     <!-- Copyright -->
 </footer>
 <!-- Footer -->
-<router-outlet></router-outlet>
